# LDData

./: .gitignore  LDData Demo.ipynb  LD_DATA.md  PUBLISH2HF.md  README.md  env.yml  pyproject.toml  pytest.ini  upload.py
LDData/: __init__.py
dnet/: ebert_osisiogu.niederreiter_52.txt
mpmc/: mpmc_d10_n1024_L2asd_weighted.npy  mpmc_d10_n1024_L2ctr.npy  mpmc_d10_n1024_L2ctr_weighted.npy  mpmc_d10_n1024_L2ext.npy  mpmc_d10_n1024_L2mix.npy  mpmc_d10_n1024_L2per_weighted.npy  mpmc_d10_n1024_L2star.npy  mpmc_d10_n1024_L2star_weighted.npy  mpmc_d10_n1024_L2sym.npy  mpmc_d10_n1024_L2sym_weighted.npy  mpmc_d10_n128_L2asd.npy  mpmc_d10_n128_L2asd_weighted.npy  mpmc_d10_n128_L2ctr.npy  mpmc_d10_n128_L2ctr_weighted.npy  mpmc_d10_n128_L2ext.npy  mpmc_d10_n128_L2ext_weighted.npy  mpmc_d10_n128_L2mix.npy  mpmc_d10_n128_L2star.npy  mpmc_d10_n16_L2asd_weighted.npy  mpmc_d10_n16_L2per.npy  mpmc_d10_n16_L2per_weighted.npy  mpmc_d10_n16_L2star.npy  mpmc_d10_n16_L2sym_weighted.npy  mpmc_d10_n256_L2asd.npy  mpmc_d10_n256_L2asd_weighted.npy  mpmc_d10_n256_L2ctr_weighted.npy  mpmc_d10_n256_L2ext_weighted.npy  mpmc_d10_n256_L2per_weighted.npy  mpmc_d10_n256_L2star_weighted.npy  mpmc_d10_n256_L2sym.npy  mpmc_d10_n256_L2sym_weighted.npy  mpmc_d10_n32_L2asd.npy  mpmc_d10_n32_L2asd_weighted.npy  mpmc_d10_n32_L2ctr.npy  mpmc_d10_n32_L2ctr_weighted.npy  mpmc_d10_n32_L2ext.npy  mpmc_d10_n32_L2ext_weighted.npy  mpmc_d10_n32_L2per_weighted.npy  mpmc_d10_n32_L2star.npy  mpmc_d10_n512_L2asd_weighted.npy  (+308 more)
scripts/: git_lfs_upload.sh
tests/: conftest.py  test_hf_dataset.py  test_integration_hf.py  (+1 more)
(+854 files in other folders)
